# orchestrix

./: .gitignore  create_all.py  pyproject.toml
docs/: creating_new_model.md
src/orchestrix/: app.py  cli.py  db.py  env.py
src/orchestrix/command/: env.py  model.py
src/orchestrix/fw/: command.py  exc.py  model.py  service.py
src/orchestrix/route/: auth.py  cluster.py  service.py
src/orchestrix/service/auth/: model.py
src/orchestrix/service/host/: __init__.py  model.py
src/orchestrix/service/oauth_client/: __init__.py  model.py
src/orchestrix/service/tenant/: __init__.py  model.py
src/orchestrix/service/user/: __init__.py  login.py  model.py
