[project]
name = "orchestrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "click>=8.1.8",
    "fastapi[standard]>=0.115.6",
    "pendulum>=3.0.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "tabulate>=0.9.0",
    "uuid7>=0.1.0",
]

[tool.uv]
package = true

[project.scripts]
orchestrix = "orchestrix.cli:cli"
